<resources>
    <string name="app_name">ComunidadesEspaña</string>
    <string name="limpiar">Limpiar</string>
    <string name="recargar">Recargar</string>
    <string name="cambiar">Cambiar</string>
    <string name="cancelar">Cancelar</string>
    <string name="login_title">COMUNIDADES</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_pass">Password</string>
    <string name="check_text">Recordar usuario</string>
    <string name="login_button">Login</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="foto">Foto</string>
</resources>